kullanıcı bazlı harcama kategorileri eklendi. all kelimeleri kaldırıldı.